examples/conformance/valid/valid_basic_linear.flo
spec_version: "0.1"

process:
  id: order_fulfillment_v1
  name: Order Fulfillment

steps:
  - id: start
    kind: start

  - id: pick
    kind: task
    lane: operations

  - id: pack
    kind: task
    lane: operations

  - id: ship
    kind: end

transitions:
  - source: start
    target: pick
  - source: pick
    target: pack
  - source: pack
    target: ship
